<resources>
    <string name="app_name">Hotel Booking</string>
    <string name="location">Location:</string>
    <string name="roomType">Room Type:</string>
    <string name="checkInDate">Check In Date:</string>
    <string name="checkOutDate">Check Out Date:</string>
    <string name="noOfRooms">Number of Rooms:</string>
    <string name="roomCharge">Room Charge:</string>
    <string name="serviceTax">Service Tax:</string>
    <string name="vat">VAT:</string>
    <string name="total">Total:</string>
</resources>
